Changes to final derivability

--- a/primiero.bib
+++ b/primiero.bib
@@ -4245,6 +4245,21 @@
   series = {Ergebnisse der {M}athematik und ihrer {G}renzgebiete}
 }
 
+@book{Blackburn:ModalLogic:2001,
+  author = {Blackburn, Patrick  and De Rijke, Maarten  and Venema, Yde},
+  title = {Modal Logic},
+  uuid = {A0CC7A89-BDB9-4196-BE87-8BF789EBF2FC},
+  publisher = {Cambridge University Press},
+  address = {Cambridge},
+  year = {2001},
+  url = {},
+  source_app = {EndNote},
+  EndNote_reference_number = {14},
+  label = {BlDRVe01},
+  Citation_identifier = {Blackburn 2001},
+  publicationStatus = {Unknown}
+}
+
 @ARTICLE{bla03:toplas,
   author = {B. Blanchet},
   title = {Escape analysis for Java: {Theory} and practice},
