--- a/note1.tex
+++ b/note1.tex
@@ -13,6 +13,7 @@
 
 \newtheorem{definition}{Definition}
 \newtheorem{theorem}{Theorem}
+\newtheorem{proposition}{Proposition}
 
 \newcommand{\TurnADND}[2]
     { {#1}\vdash_{\textbf{\sf AdaptiveND}}  {#2}}
@@ -867,7 +868,7 @@ A formula $\psi$ is derived at stage {\sf s}  iff $\Turn{\Gamma; \phi^{-}}{\psi}
 %$\Turn{\Gamma; \cdot}{\phi,\psi}$
 \end{definition}
 
-A more stable notion of derivability holds when marking is no longer possible.
+A more stable notion of derivability, called \emph{final derivability}, holds when marking is no longer possible. This notion is customarily defined with a reference to possible extensions of a proof.\footnote{``A is finally derived from $\Gamma$ on line $i$ of a proof at stage $s$ iff (i) $A$ is the second element of line $i$, (ii) line $i$ is not marked at stage $s$, and (iii) every extension of the proof in which line $i$ is marked may be further extended in such a way that line $i$ is unmarked.'' \cite[229]{batens07}} Because we only take into consideration finite premise-sets, we can pursue a more explicit characterisation of final derivability.
 % Because our left-hand side of the $\vdash$ sign, hence our ``premise set'', includes the $\vee_{\sf CL}$ connective for $Dab$-formulas, it is in principle possible to generate trees where some standard adaptive consequences (i.e. consequences of a corresponding AL in standard format) would be first marked and then never get unmarked.\footnote{These results are based on the generic format for Adaptive logics presented in \cite{strasservandeputte12}. A different approach that allows insertion of lines in proof trees is given for the Standard Format in \cite{batens2009}.}
 %
 %[HERE AN EXAMPLE]
@@ -889,9 +890,8 @@ $Sf(\Gamma)=\bigcup_{\phi \in \Gamma} \{\psi \mid \psi$ is a subformula of $ \ph
 From $Sf(\Gamma)$ we then construe all the possible abnormalities which can be obtained by its members:
 
 \begin{definition}[Abnormalities relevant to the premise set]
-$\Omega(\Gamma)=\{\psi\wedge \neg \psi \mid \psi\in Sf(\Gamma)\}$.
+$\Omega(\Gamma)=\{\psi\wedge \neg \psi \mid \psi\in Sf(\Gamma)\}$. (Note: when a restriction applies to the formation of $\Omega$, the same restriction should also apply to $\Omega(\Gamma)$)
 \end{definition}
-
 %\begin{definition}
 %Let $P$ be a proof-tree of {\sf AdaptiveND}. We call $P^{\sf ext}$ the complete extension of $P$ at stage {\sf s} if $P^{\sf ext}$ extends $P$ by a possibly infinite number of derivation steps such that 
 %
@@ -901,8 +901,10 @@ $\Omega(\Gamma)=\{\psi\wedge \neg \psi \mid \psi\in Sf(\Gamma)\}$.
 %\end{enumerate}
 %\end{definition}
 %
-
-Given this preparatory work, we now introduce the notion of a \textit{complete proof-tree} with respect to derivable relevant disjunction of abnormalities:
+\begin{proposition}
+    If $\vee(\Delta)$ is a minimal disjunction of abnormalities derivable from $\Gamma$, then $\Delta \subseteq \Omega(\Gamma)$.
+\end{proposition}
+Given this preparatory work, which relies on the construction of a finite set of models (and hence a finite set of minimal disjunction of abnormalities) using a strategy similar to the use of filtrations to obtain finite models in modal logic \cite[77ff]{Blackburn:ModalLogic:2001}, we now introduce the notion of a \textit{complete proof-tree} with respect to derivable relevant disjunction of abnormalities:
 
 \begin{definition}[Completeness relative to relevant abnormalities]
 Let $P$ be a proof-tree of {\sf AdaptiveND}. We say that $P$ is complete relative to $\Omega(\Gamma)$ at stage {\sf s} if for every derivable $\bigvee(\Delta^{min})$ with $\Delta\subseteq\Omega(\Gamma)$ there is an $\mathsf{s' < s}$ such that $\TurnPrime{\Gamma;\cdot}{\bigvee(\Delta^{min})}$.
@@ -928,7 +930,9 @@ A formula $\psi$ is finally derived $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ iff th
 The definition guarantees final derivability for any derived formula whose  adaptive condition is not minimal. 
 %Notice that the second requirement might not be satisfied at any finite stage {\sf s}, hence it might be guaranteed only at meta-theoretical level.
 
-\section{Classical recapture: logical options and defeasible inferences}\label{sec:recap}
+\section{Classical recapture, logical options and defeasible inferences}\label{sec:recap}
+To conclude, we would like to highlight certain distinctive features of the proposed calculus, and briefly discuss how these features can be used to reconsider the question of classical recapture. As we see it, the defeasible reasoning-forms formalised in our \textsf{AdaptiveND} system have three primary virtues: (i) they are formulated in a tree-format that forces one to state all information that is used in an inference-step explicitly and thus restricts the reliance on global features of a proof to a minimum (e.g. when checking that a disjunction of abnormalities is minimal), (ii) the multiple-conclusion format leads to a transparent connection between the restricted inference-rules that are valid in \textsf{MinimalND} (i.e. the lower-limit-logic) and their use as a premise of the conditional rule, and (iii) the explicit individuation of abnormalities as a sub-type of the well-formed formulae.
+
 When one adopts a logic that is strictly weaker than classical logic, the question of how one should account for epistemically useful classical inference-forms that are invalidated by one's preferred logic almost immediately arises. In the case of paraconsistent logic this question is often deemed quite urgent, as the practical and epistemic usefulness of the inference-forms that are lost, like the disjunctive syllogism, are almost undisputed. This is the problem of \emph{classical recapture}. Inconsistency-adaptive logics present one possible answer to this challenge under the form of defeasible inference-forms that allow one to use classical inference-steps on the condition that certain assumptions are not violated. The class of adaptive logics that have been formulated since the earliest formulation of this paradigm as a response to the problem of classical recapture generalise this idea, and provide a general framework in which many types of defeasible inference-forms can be rigourously formalised.
 
 In several papers Graham Priest has explicitly endorsed this type of approach to the classical recapture problem of the paraconsistent logic \textbf{LP}, and has defended his own preferred formalisation and motivation for what he calls \emph{Minimally Inconsistent LP}. When compared to the systems developed in the adaptive logic tradition, this system stands out because it is based on a strong paraconsistent logic that nevertheless lacks a detachable implication (which makes the problem of classical recapture even more stringent), but also because it is put forward as a potential universal inference engine that can be applied in all contexts. At the level of its formal characterisation, minimally inconsistent LP differs from its closest neighbour ACLuNs$^m$ 
