reference to Strasser added

--- a/note1.tex
+++ b/note1.tex
@@ -863,7 +863,7 @@ Accordingly, every proof in \textsf{AdaptiveND} can, with the help of the number
         (10) & $p \wedge \neg p$ & $\wedge$ I, (8, 9) & $\emptyset$\\
     \end{tabular}
 \end{center}
-In this proof, the application of $\vee$E on line (2) is based on the representation of the disjunctive comma by a `super-imposed' classical disjunction (a device that effectively plays the same role in adaptive logic, see ...), whereas the application of $\wedge$I is valid in virtue of the \textbf{CLuN}-validity of $\neg p \vee q, p \vdash (p \wedge \neg p) \vee q$ which warrants the application of the unconditional rule (with empty conditions). The final marking is not added as a separate line, but is instead added in the fifth place on line 5 and labelled with the number of the line or stage at which the relevant abnormality was derived.
+In this proof, the application of $\vee$E on line (2) is based on the representation of the disjunctive comma by a `super-imposed' classical disjunction (a device that effectively plays the same role in adaptive logic, see \cite[\S 2.2, 2.7]{Strasser:AdaptiveLogicsForDefeasibleReasoning:}), whereas the application of $\wedge$I is valid in virtue of the \textbf{CLuN}-validity of $\neg p \vee q, p \vdash (p \wedge \neg p) \vee q$ which warrants the application of the unconditional rule (with empty conditions). The final marking is not added as a separate line, but is instead added in the fifth place on line 5 and labelled with the number of the line or stage at which the relevant abnormality was derived.
 
 \section{Derivability}\label{sec:meta}
 
@@ -911,7 +911,7 @@ $\Omega(\Gamma)=\{\psi\wedge \neg \psi \mid \psi\in Sf(\Gamma)\}$. (Note: when a
 %\end{definition}
 %
 \begin{proposition}
-    If $\vee(\Delta)$ is a minimal disjunction of abnormalities derivable from $\Gamma$, then $\Delta \subseteq \Omega(\Gamma)$.
+    If $\bigvee(\Delta)$ is a minimal disjunction of abnormalities derivable from $\Gamma$, then $\Delta \subseteq \Omega(\Gamma)$.
 \end{proposition}
 Given this preparatory work, which relies on the construction of a finite set of models (and hence a finite set of minimal disjunction of abnormalities) using a strategy similar to the use of filtrations to obtain finite models in modal logic \cite[77ff]{Blackburn:ModalLogic:2001}, we now introduce the notion of a \textit{complete proof-tree} with respect to derivable relevant disjunction of abnormalities:
 
