--- a/primiero.bib
+++ b/primiero.bib
@@ -6953,6 +6953,24 @@
   timestamp = {2012.12.07}
 }
 
+@book{Strasser:AdaptiveLogicsForDefeasibleReasoning:,
+  author = {Strasser, Christian},
+  title = {Adaptive Logics for Defeasible Reasoning},
+  uuid = {BF9F0911-9660-4D32-94E9-B486F77989F0},
+  publisher = {Springer},
+  year = {2014},
+  ISBN = {978-3-319-00791-5},
+  sentelink = {syncii:///Adaptive%20Logics%20for%20Defeasible%20Reasoning%20Strasser.pdf,Sente,},
+  url = {},
+  GoogleBooks_key = {9jtgnAEACAAJ},
+  Series_number = {38},
+  Web_data_source = {Google Books},
+  Series = {Trends in Logic},
+  Citation_identifier = {Strasser},
+  publicationStatus = {Unknown},
+  abstract = {This book presents adaptive logics (ALs) as an intuitive and powerful framework to model defeasible reasoning. It offers case studies stemming from various contexts of defeasible reasoning, such as default reasoning, argumentation, and normative reasoning.}
+}
+
 @BOOK{faginhalpernmosesvardi95,
   title = {Reasoning about Knowledge},
   publisher = {MIT Press},
