--- a/note1.tex
+++ b/note1.tex
@@ -174,7 +174,7 @@ Middlesex University London\\
 \maketitle
 
 \begin{abstract}
-We present a multi-conclusion natural deduction calculus based on minimal logic extended with a set of rules characterizing the dynamic reasoning typical of adaptive logics. The resulting system {\sf AdaptiveND} is sound and complete with respect to the propositional fragment of adaptive logic \textbf{CLuN$^r$}. This appears to be the first tree-format presentation of the standard linear dynamic proof system typical fo Adaptive Logics. It offers the advantage of full local transparency in the formulation of locally derivable rules, a transparent connection between restricted inference rules and their adaptive counterpart, and the formulation of abnormalities as a subtype fo well-formed formulas.
+We present a multi-conclusion natural deduction calculus characterizing the dynamic reasoning typical of adaptive logics. The resulting system {\sf AdaptiveND} is sound and complete with respect to the propositional fragment of adaptive logic \textbf{CLuN$^r$}. This appears to be the first tree-format presentation of the standard linear dynamic proof system typical of Adaptive Logics. It offers the advantage of full transparency in the formulation of locally derivable rules, connection between restricted inference rules and their adaptive counterpart, and the formulation of abnormalities as a subtype of well-formed formulas. These features of the proposed calculus are used to reconsider the question of classical recapture. 
 \end{abstract}
 
 \section{Intro}
