work on final section

--- a/note1.tex
+++ b/note1.tex
@@ -940,9 +940,16 @@ The definition guarantees final derivability for any derived formula whose  adap
 %Notice that the second requirement might not be satisfied at any finite stage {\sf s}, hence it might be guaranteed only at meta-theoretical level.
 
 \section{Classical recapture, logical options and defeasible inferences}\label{sec:recap}
-To conclude, we would like to highlight certain distinctive features of the proposed calculus, and briefly discuss how these features can be used to reconsider the question of classical recapture. As we see it, the defeasible reasoning-forms formalised in our \textsf{AdaptiveND} system have three primary virtues: (i) they are formulated in a tree-format that forces one to state all information that is used in an inference-step explicitly and thus restricts the reliance on global features of a proof to a minimum (e.g. when checking that a disjunction of abnormalities is minimal), (ii) the multiple-conclusion format leads to a transparent connection between the restricted inference-rules that are valid in \textsf{MinimalND} (i.e. the lower-limit-logic) and their use as a premise of the conditional rule, and (iii) the explicit individuation of abnormalities as a sub-type of the well-formed formulae.
+To conclude, we would like to highlight certain distinctive features of the proposed calculus, and briefly discuss how these features can be used to reconsider the question of classical recapture. As we see it, the defeasible reasoning-forms formalised in our \textsf{AdaptiveND} system have three primary virtues: (i) they are formulated in a tree-format that forces one to state all information that is used in an inference-step explicitly and thereby restricts the reliance on global features of a proof to a minimum (e.g. when checking that a disjunction of abnormalities is minimal), (ii) the multiple-conclusion format leads to a transparent connection between the restricted inference-rules that are valid in \textsf{MinimalND} (i.e. the lower-limit-logic) and their use as a premise of the conditional rule, and (iii) the explicit individuation of abnormalities as a sub-type of the well-formed formulae.
 
-When one adopts a logic that is strictly weaker than classical logic, the question of how one should account for epistemically useful classical inference-forms that are invalidated by one's preferred logic almost immediately arises. In the case of paraconsistent logic this question is often deemed quite urgent, as the practical and epistemic usefulness of the inference-forms that are lost, like the disjunctive syllogism, are almost undisputed. This is the problem of \emph{classical recapture}. Inconsistency-adaptive logics present one possible answer to this challenge under the form of defeasible inference-forms that allow one to use classical inference-steps on the condition that certain assumptions are not violated. The class of adaptive logics that have been formulated since the earliest formulation of this paradigm as a response to the problem of classical recapture generalise this idea, and provide a general framework in which many types of defeasible inference-forms can be rigourously formalised.
+The explicit connection between multiple-conclusions and defeasible inferences brings a recent disagreement over the problem of classical recapture in the logic \textbf{LP} into focus.\footnote{See \cite[18ff]{Allo:Theoria:2015} for a more detailed reconstruction of this debate.} In several papers Graham Priest has explicitly endorsed the adaptive approach to classical recaptured, and has to that effect proposed his own \emph{minimally inconsistent} \textbf{LP}; an adaptive logic based on a stronger paraconsistent logic (but without a detachable implication) and the minimal abnormality strategy \cite{GP:LPm}. This approach has been criticised by JC Beall, another prominent defender of the logic \textbf{LP}, on the ground that any all-purpose logic should at all cost prevent one to step from truth to falsehood \cite{Beall01072012}. This is a task that cannot in general be fulfilled by an adaptive logic, and indeed a task we shouldn't impute on adaptive logic in the first place \cite{Priest01102012}. By contrast, Beall's preferred take on classical recapture is that it should be handled with extra-logical means. One formalism in which such an extra-logical approach can be made precise is a multiple-conclusion extension of \textbf{LP}. Relying on the generalisation of consequence in a multiple-conclusion setting, the following relation between classical logic and \textbf{LP} \cite[Theorem 3.7]{Beall:TheReviewOfSymbolicLogic:2011} becomes very natural:
+\[
+    X \models_{CPL}^+ Y \text{ iff } X \models_{LP}^+ Y \cup \iota(X)
+\]
+with $\iota(X) ={p \wedge \neg p : p \in \mathrm{at}(X)}$. That is, using our own formulation, $\Gamma \vdash_{LP} \Delta \cup \Omega(\Gamma)$ (with the construction of $\Omega(\Gamma)$ restricted to atomic formulae to fit the use of a stronger Lower Limit Logic) expresses relative to the consequence-relation of $\mathbf{LP}^+$ the idea of default classicality, and can be seen as a corollary of the more general \emph{Derivability Adjustment Theorem} from \cite{batens07}. Beall's understanding of this result is that from the viewpoint of \textbf{LP} we should think of logic as a constraint on our logical options (i.e. the set on the right hand of the turnstile), and any further choice among these options should be understood in terms of less general (and often fallible) principles. 
+
+
+When one adopts a logic that is strictly weaker than classical logic, the question of how one should account for epistemically useful classical inference-forms that are invalidated by one's preferred logic almost immediately arises. In the case of paraconsistent logic this question is often deemed quite urgent, as the practical and epistemic usefulness of the inference-forms that are lost, like the disjunctive syllogism, are almost undisputed. This is the problem of \emph{classical recapture}. Inconsistency-adaptive logics present one possible answer to this challenge under the form of defeasible inference-forms that allow one to use classical inference-steps on the condition that certain assumptions are not violated. The class of adaptive logics that have been formulated since the earliest formulation of this paradigm as a response to the problem of classical recapture generalise this idea, and provide a general framework in which many types of defeasible inference-forms can be rigorously formalised.
 
 In several papers Graham Priest has explicitly endorsed this type of approach to the classical recapture problem of the paraconsistent logic \textbf{LP}, and has defended his own preferred formalisation and motivation for what he calls \emph{Minimally Inconsistent LP}. When compared to the systems developed in the adaptive logic tradition, this system stands out because it is based on a strong paraconsistent logic that nevertheless lacks a detachable implication (which makes the problem of classical recapture even more stringent), but also because it is put forward as a potential universal inference engine that can be applied in all contexts. At the level of its formal characterisation, minimally inconsistent LP differs from its closest neighbour ACLuNs$^m$ 
 
