--- a/primiero.bib
+++ b/primiero.bib
@@ -17,6 +17,29 @@
   crossref = {J:iis}
 }
 
+@article{Allo:Theoria:2015,
+  author = {Allo, Patrick},
+  title = {Logic, Reasoning and Revision},
+  journal = {Theoria},
+  uuid = {5D657B5F-7C35-45C9-9FBF-3F6B16B7FE30},
+  volume = {82},
+  number = {1},
+  pages = {3-31},
+  publisher = {Wiley-Blackwell},
+  year = {2016},
+  doi = {10.1111/theo.12071},
+  ISSN = {0040-5825},
+  sentelink = {file:///Users/patrickallo/Documents/_ARCHIVE/SenteBib/SenteBibSync.sente6lib/Contents/Attachments/Allo%2C%20P/2015/Logic%2C%20Reasoning%20and%20Revision%20%233.webarchive,Sente,Web Page Archived 21 jan. 2016 15:11:17},
+  sentelink = {file:///Users/patrickallo/Documents/_ARCHIVE/SenteBib/SenteBibSync.sente6lib/Contents/Attachments/Allo%2C%20P/2015/Logic%2C%20Reasoning%20and%20Revision.pdf,Sente,},
+  url = {},
+  keywords = {Philosophy},
+  Medium_consulted = {Web},
+  EndNote_reference_number = {1251},
+  Web_data_source = {Wiley},
+  Citation_identifier = {Allo 2015b},
+  publicationStatus = {published}
+}
+
 @INCOLLECTION{L81,
   author = {Leo Apostel},
   title = {Some remarks on ontology},
@@ -438,6 +461,49 @@
   bibfiles = {dirk},
   crossref = {D\&H:r}
 }
+
+@article{Beall01072012,
+  author = {Beall, Jc},
+  title = {Why {P}riest’s reassurance is not reassuring},
+  journal = {Analysis},
+  uuid = {BD891A1B-734C-47EA-948C-F38136DEEA77},
+  volume = {72},
+  number = {3},
+  pages = {517-525},
+  year = {2012},
+  doi = {10.1093/analys/ans069},
+  sentelink = {file:///Users/patrickallo/Documents/_ARCHIVE/SenteBib/SenteBibSync.sente6lib/Contents/Attachments/Beall%2C%20J/2012/Why%20Priest%E2%80%99s%20reassurance%20is%20no.pdf,Sente,},
+  url = {http://analysis.oxfordjournals.org/content/72/3/517.abstract},
+  Medium_consulted = {Web},
+  EndNote_reference_number = {1155},
+  Web_data_source = {Oxford},
+  GCA_ID = {analys;72/3/517},
+  Citation_identifier = {Beall 2012},
+  publicationStatus = {Unknown},
+  abstract = {In the service of paraconsistent (indeed, ‘dialetheic’) theories, Graham Priest has long advanced a non-monotonic logic (viz., MiLP) as our ‘universal logic’ (at least for standard connectives), one that enjoys the familiar logic LP (for ‘logic of paradox’) as its monotonic core (Priest, G. In Contradiction, 2nd edn. Oxford: Oxford University Press. First printed by Martinus Nijhoff in 1987: Chs. 16 and 19). In this article, I show that MiLP faces a dilemma: either it is (plainly) unsuitable as a universal logic or its role as a ‘universal logic’ (indeed, its role full stop) is a mystery. While familiarity with the basic ideas of dialetheism is assumed, formal details of the target logics are relegated to an appendix; the basic problem is evident without them.}
+}
+
+@article{Beall:TheReviewOfSymbolicLogic:2011,
+  author = {Beall, JC C.},
+  title = {Multiple-Conclusion LP And Default Classicality},
+  journal = {The Review of Symbolic Logic},
+  uuid = {803771CD-C623-420D-A01D-8055F64F5F7B},
+  volume = {4},
+  number = {2},
+  pages = {326-336},
+  publisher = {Cambridge University Press},
+  month = {6},
+  year = {2011},
+  doi = {10.1017/S1755020311000074},
+  ISSN = {1755-0203},
+  sentelink = {https://www.cambridge.org/core/services/aop-cambridge-core/content/view/08948D4E8AD25C86686126F7E71508FA/S1755020311000074a.pdf/div-class-title-multiple-conclusion-lp-and-default-classicality-div.pdf,COINS,Link for download},
+  sentelink = {file:///Users/patrickallo/Documents/_ARCHIVE/SenteBib/SenteBibSync.sente6lib/Contents/Attachments/BEALL%2C%20JC/2011/MULTIPLE-CONCLUSION%20LP%20AND%20DEF.webarchive,Sente,Web Page Archived 1 feb. 2017 15:47:49},
+  url = {},
+  publicationStatus = {Published},
+  Citation_identifier = {Beall 2011},
+  abstract = {MULTIPLE-CONCLUSION LP AND DEFAULT CLASSICALITY - Volume 4 Issue 2 - JC BEALL}
+}
+
 
 @INCOLLECTION{BD&P2,
   author = {Salem Benferhat and Didier Dubois and Henri Prade},
@@ -13322,6 +13388,26 @@
   volume = {To appear},
   pages = {To appear},
   bibfiles = {dirk}
+}
+
+@article{Priest01102012,
+  author = {Priest, Graham},
+  title = {The sun may not, indeed, rise tomorrow: a reply to {B}eall},
+  journal = {Analysis},
+  uuid = {F6C33080-32D9-47CD-89CD-AA0B443341D9},
+  volume = {72},
+  number = {4},
+  pages = {739-741},
+  year = {2012},
+  doi = {10.1093/analys/ans120},
+  sentelink = {file:///Users/patrickallo/Documents/_ARCHIVE/SenteBib/SenteBibSync.sente6lib/Contents/Attachments/Priest%2C%20G/2012/The%20sun%20may%20not%2C%20indeed%2C%20rise.pdf,Sente,},
+  url = {http://analysis.oxfordjournals.org/content/72/4/739.short},
+  Medium_consulted = {Web},
+  EndNote_reference_number = {1156},
+  Web_data_source = {Oxford},
+  GCA_ID = {analys;72/4/739},
+  Citation_identifier = {Priest 2012},
+  publicationStatus = {Unknown}
 }
 
 @INPROCEEDINGS{primiero07,
